--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Sass project-2</title>
 </head>
 <body>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam voluptas impedit necessitatibus animi saepe consectetur, quidem iusto excepturi aliquid hic?</p>
     
 </body>
 </html>
