--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Sass project-2</title>
 </head>
 <body>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam voluptas impedit necessitatibus animi saepe consectetur, quidem iusto excepturi aliquid hic?</p>
+
+    <p>hahahahaha</p>
+
     
 </body>
 </html>
